빌드 오류 수정: 누락된 메서드 추가